--- a/assets/css/less_parts/footer.less
+++ b/assets/css/less_parts/footer.less
@@ -36,8 +36,12 @@
 	    margin: 10px 20px 60px 20px;
 		}
 
-		@media(max-width: 800px){
+		@media(max-width: 600px){
 	    width: auto;
+
+			&:last-child{
+				margin-bottom: 0;
+			}
 		}
 
 		.title {
