--- a/assets/css/less_parts/githubcard.less
+++ b/assets/css/less_parts/githubcard.less
@@ -17,7 +17,7 @@
     overflow: hidden;
     padding: 10px;
     @media(max-width: 800px) {
-      width: 100%;
+      width: auto;
       margin-bottom: 30px;
     }
   }
