--- a/assets/css/less_parts/post.less
+++ b/assets/css/less_parts/post.less
@@ -144,6 +144,10 @@
 	.post-content {
 		margin: 20px 100px 40px;
 
+		.kg-card-markdown > p {
+			 text-align: justify;
+		}
+
 		img {
 			border: 1px solid #eaeaea;
 		}
