--- a/assets/css/less_parts/tags.less
+++ b/assets/css/less_parts/tags.less
@@ -73,10 +73,10 @@
   }
 
   .excel {
-    color: #008a00;
+    color: #099c09;
 
     i {
-      color: #008a00 !important;
+      color: #099c09 !important;
     }
   }
 
