--- a/assets/css/less_parts/author.less
+++ b/assets/css/less_parts/author.less
@@ -9,9 +9,15 @@
 	}
 
 	h3 {
-		 font-size: 2.5em;
+		 font-size: 2em;
 		 margin:10px;
 	}
+
+	.bio {
+		max-width: 500px;
+		margin: 15px auto 0;
+	}
+
 
 	.link-preview {
 		height: 167px;
