--- a/assets/css/less_parts/postpreview.less
+++ b/assets/css/less_parts/postpreview.less
@@ -18,7 +18,8 @@
 		.post-title {
 			font-size: 3em;
 			@media(max-width: 600px) {
-				font-size: 1.7em !important;
+				font-size: 2em !important;
+				/*text-align: justify;*/
 			}
 		}
 
@@ -56,6 +57,7 @@
 
 		.meta-item {
 			display: flex;
+			justify-items: center;
 			margin: auto 0;
 			font-family: 'akzidenz-medium';
 
@@ -77,10 +79,6 @@
 				i {
 					color: #8e8e8e !important;
 				}
-			}
-
-			* {
-				/*color: #6e7980;*/
 			}
 
 			a {
@@ -137,6 +135,11 @@
 	.post-content {
 		line-height: 1.5;
 		margin: 0 0 25px;
+
+		.kg-card-markdown {
+			  text-align: justify;
+		}
+
 		@media(max-width: 600px) {
 			font-size: 16px;
 		}
@@ -156,6 +159,12 @@
 
 		.post-content {
 			display: none;
+		}
+
+		.post-title {
+			@media(max-width: 600px){
+				font-size: 1.7em !important;
+			}
 		}
 	}
 
