--- a/partials/config.hbs
+++ b/partials/config.hbs
@@ -13,7 +13,7 @@ var badge_type = 'community'; // person / page / community ----- three type of g
 var google_plus_url = 'https://plus.google.com/communities/106724509785464667119';
 
 //	4. Facebook Page Setting
-var facebook_page_url = 'https://www.facebook.com/facebook_page_url';
+var facebook_page_url = 'https://www.facebook.com/hackersandslackers/';
 
 //	5. Mailchimp signup form Setting
 var mailchimp_form_url = 'https://toddbirchard.us18.list-manage.com/subscribe?u=0810212e7213d32985240886c&id=3b2ab26ac7';
