fb widget, interim author page

--- a/assets/css/less_parts/widgets.less
+++ b/assets/css/less_parts/widgets.less
@@ -12,6 +12,10 @@
 				justify-content: space-between;
 		}
 
+		.fb {
+			 height: 220px;
+		}
+
 		.newsletter {
 			button {
 		    background: #26a2c7;
