--- a/author.hbs
+++ b/author.hbs
@@ -5,7 +5,7 @@
 	<div class="container">
 		<div class="row">
 			{{! insert sidebar partial}}
-			{{> sidebar}}
+			{{!-- {{> sidebar}} --}}
 			<!-- start main post area -->
 			<div class="col-md-8 main-content">
 				{{> cover-author}}
