--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -20,7 +20,7 @@
 	{{^is "page,author"}}
 		{{> widget-twitter}}
 	{{/is}}
-	{{!-- {{> widget-facebook}} --}}
+	{{> widget-facebook}}
 	{{!-- {{> widget-google-plus}} --}}
 </div>
 <!-- end sidebar -->
