--- a/assets/css/less_parts/customtemplates.less
+++ b/assets/css/less_parts/customtemplates.less
@@ -126,6 +126,14 @@
 
 .page-projects {
 
+  .sidebar {
+    display: none;
+  }
+
+  .container {
+        max-width: 1400px;
+  }
+
   h1{
     @media(max-width: 600px){
       font-size: 3em;
