--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -23,6 +23,7 @@
 @import "less_parts/postlist.less";
 @import "less_parts/tags.less";
 @import 'less_parts/githubcard.less';
+@import 'less_parts/kanban.less';
 
 
 /*====================================================
