--- a/assets/css/less_parts/kanban.less
+++ b/assets/css/less_parts/kanban.less
@@ -1,16 +1,45 @@
+.intro {
+  padding: 30px;
+  width: auto;
+  background: white;
+  margin: auto;
+
+  h1 {
+    margin: 10px 0 30px 0;
+
+    @media(max-width: 800px){
+      margin: 30px 0 30px 0;
+    }
+  }
+
+  p:last-child {
+    margin:0;
+  }
+
+  .featured-media {
+    @media(max-width: 800px){
+      width: 114% !important;
+      margin-left: -7% !important;
+      margin-top: -7% !important;
+    }
+  }
+
+
+}
+
 .kanban {
   width: auto;
   max-height: 1180px;
   display: flex;
   justify-content: space-between;
   background: none;
-  padding: 20px;
+  padding: 20px 0;
 
   .column {
-    width: 22%;
+    width: 23%;
     background: white;
     border: 1px solid #f9f9f9;
-    padding: 20px 15px;
+    padding: 20px;
 
     h2 {
       margin-top: 0;
@@ -33,15 +62,16 @@
         padding: 10px 15px;
         position: relative;
         border: 1px solid #eaeaea;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
 
         &.last-child {
           margin-bottom: 0px;
         }
 
         h5 {
-          font-size: 1em;
+          font-size: 1.1em;
           font-family: 'akzidenz-regular';
+          color: #3c3d46;
           width: 80%;
           line-height: 1.2;
         }
@@ -49,7 +79,7 @@
         p {
           line-height: 1.3;
           font-size: .9em;
-          margin: 10px 0;
+          margin: 10px 0 15px;
           width: auto;
           overflow: hidden;
         }
@@ -57,10 +87,10 @@
         .issuetype {
           position: absolute;
           top: 0;
-          right: 10px;
+          right: 15px;
           top: 0;
-          width: 26px;
-          height: 25px;
+          width: 24px;
+          height: 23px;
           padding: 5px 0px;
           background: red;
           color: white;
@@ -76,14 +106,14 @@
             width: 0;
             height: 0;
             margin:0;
-            border-bottom: 10px solid #f9f9f9;
-            border-left: 13px solid transparent;
+            border-bottom: 7px solid #f9f9f9;
+            border-left: 12px solid transparent;
             border-right: 13px solid transparent;
           }
 
           img {
-            width: 12px;
-            height: 12px;
+            width: 15px;
+            height: 15px;
           }
 
           &.Task,
@@ -142,7 +172,7 @@
               }
 
               &.High {
-                color: red;
+                color: #ea7272;
               }
 
               &.Medium,
@@ -151,29 +181,31 @@
               }
 
               &.Low {
-                color: green;
+                color: #7abb7a;
+                transform: rotate(180deg);
               }
 
               &.Lowest {
                 color: green;
+                transform: rotate(180deg);
               }
             }
           }
 
           .epic {
             border-radius: 2px;
-            padding: 1px;
             text-align: center;
-            width: 40%;
+            padding: 1px 10px;
 
             span {
               color: white;
               font-size: 12px;
-              font-family: 'akzidenz-medium';
+              font-family: 'akzidenz-regular';
             }
 
             &.Creative span,
-            &.Widgets span {
+            &.Widgets span,
+            &.Lynx span {
               color: #42526E;
             }
           }
