--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1570,7 +1570,7 @@ pre {
   display: none;
 }
 .page-projects .container {
-  max-width: 1400px;
+  max-width: 1200px;
 }
 @media (max-width: 600px) {
   .page-projects h1 {
@@ -2997,19 +2997,43 @@ pre {
   text-align: center;
   font-weight: bold;
 }
+.intro {
+  padding: 30px;
+  width: auto;
+  background: white;
+  margin: auto;
+}
+.intro h1 {
+  margin: 10px 0 30px 0;
+}
+@media (max-width: 800px) {
+  .intro h1 {
+    margin: 30px 0 30px 0;
+  }
+}
+.intro p:last-child {
+  margin: 0;
+}
+@media (max-width: 800px) {
+  .intro .featured-media {
+    width: 114% !important;
+    margin-left: -7% !important;
+    margin-top: -7% !important;
+  }
+}
 .kanban {
   width: auto;
   max-height: 1180px;
   display: flex;
   justify-content: space-between;
   background: none;
-  padding: 20px;
+  padding: 20px 0;
 }
 .kanban .column {
-  width: 22%;
+  width: 23%;
   background: white;
   border: 1px solid #f9f9f9;
-  padding: 20px 15px;
+  padding: 20px;
 }
 .kanban .column h2 {
   margin-top: 0;
@@ -3030,30 +3054,31 @@ pre {
   padding: 10px 15px;
   position: relative;
   border: 1px solid #eaeaea;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .kanban .column .cards .card.last-child {
   margin-bottom: 0px;
 }
 .kanban .column .cards .card h5 {
-  font-size: 1em;
+  font-size: 1.1em;
   font-family: 'akzidenz-regular';
+  color: #3c3d46;
   width: 80%;
   line-height: 1.2;
 }
 .kanban .column .cards .card p {
   line-height: 1.3;
   font-size: .9em;
-  margin: 10px 0;
+  margin: 10px 0 15px;
   width: auto;
   overflow: hidden;
 }
 .kanban .column .cards .card .issuetype {
   position: absolute;
-  right: 10px;
+  right: 15px;
   top: 0;
-  width: 26px;
-  height: 25px;
+  width: 24px;
+  height: 23px;
   padding: 5px 0px;
   background: red;
   color: white;
@@ -3069,13 +3094,13 @@ pre {
   width: 0;
   height: 0;
   margin: 0;
-  border-bottom: 10px solid #f9f9f9;
-  border-left: 13px solid transparent;
+  border-bottom: 7px solid #f9f9f9;
+  border-left: 12px solid transparent;
   border-right: 13px solid transparent;
 }
 .kanban .column .cards .card .issuetype img {
-  width: 12px;
-  height: 12px;
+  width: 15px;
+  height: 15px;
 }
 .kanban .column .cards .card .issuetype.Task,
 .kanban .column .cards .card .issuetype.Subtask {
@@ -3123,31 +3148,33 @@ pre {
   color: red;
 }
 .kanban .column .cards .card .info .left .priority.High {
-  color: red;
+  color: #ea7272;
 }
 .kanban .column .cards .card .info .left .priority.Medium,
 .kanban .column .cards .card .info .left .priority.undefined {
   color: orange;
 }
 .kanban .column .cards .card .info .left .priority.Low {
-  color: green;
+  color: #7abb7a;
+  transform: rotate(180deg);
 }
 .kanban .column .cards .card .info .left .priority.Lowest {
   color: green;
+  transform: rotate(180deg);
 }
 .kanban .column .cards .card .info .epic {
   border-radius: 2px;
-  padding: 1px;
   text-align: center;
-  width: 40%;
+  padding: 1px 10px;
 }
 .kanban .column .cards .card .info .epic span {
   color: white;
   font-size: 12px;
-  font-family: 'akzidenz-medium';
+  font-family: 'akzidenz-regular';
 }
 .kanban .column .cards .card .info .epic.Creative span,
-.kanban .column .cards .card .info .epic.Widgets span {
+.kanban .column .cards .card .info .epic.Widgets span,
+.kanban .column .cards .card .info .epic.Lynx span {
   color: #42526E;
 }
 /*====================================================
