--- a/assets/css/less_parts/author.less
+++ b/assets/css/less_parts/author.less
@@ -3,6 +3,10 @@
 	.main-content {
 		width: 90%;
 		margin:auto;
+
+		@media(max-width: 800px){
+			width: 100%;
+		}
 	}
 	.container .tag-hash-upcoming {
 		display: none;
