--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -3,22 +3,24 @@
 <!-- start site's main content area -->
 <section class="content-wrap archive">
 	<div class="container">
-				<!-- start post -->
-				{{#post}}
-				<div class="intro">
-					{{#if feature_image}}
-						<div class="featured-media" style="background-image: url({{feature_image}});">
-						</div>
-					{{/if}}
-				  <h1>{{{title}}}</h1>
-				  <p>{{content}}</p>
-				</div>
-					{{> kanban}}
-				{{/post}}
-				<!-- end post -->
+		<!-- start post -->
+		{{#post}}
+			<div class="intro">
+				{{#if feature_image}}
+					<div class="featured-media" style="background-image: url({{feature_image}});">
+					</div>
+				{{/if}}
+				<h1>{{{title}}}</h1>
+				<p>{{content}}</p>
+				<div class="dropdown">hackersandslackers.com <i class="far fa-angle-down"></i></div>
+				<div style="clear:both"></div>
 			</div>
-			<!-- end main post area -->
-		</div>
+			{{> kanban}}
+		{{/post}}
+		<!-- end post -->
+	</div>
+	<!-- end main post area -->
+	</div>
 	</div>
 </section>
 
