post margins, post header

--- a/assets/css/less_parts/postpreview.less
+++ b/assets/css/less_parts/postpreview.less
@@ -4,7 +4,9 @@
 
 	.featured-media {
 		box-sizing: border-box;
-		overflow: visible;
+		max-height: 400px;
+		display: block;
+		overflow: hidden;
 		margin: auto;
 	}
 
