--- a/assets/css/less_parts/post.less
+++ b/assets/css/less_parts/post.less
@@ -25,6 +25,8 @@
 
 	h3 {
 		font-size: 1.5em;
+		line-height: 1.2;
+		color:#504f5f;
 	}
 
 
@@ -102,7 +104,7 @@
 
 	.post-head {
 		padding: 30px 0;
-		margin: 0 100px;
+		margin: 0 80px;
 		border-bottom: 1px solid #eaeaea;
 
 		@media(max-width: 800px) {
@@ -111,7 +113,7 @@
 	}
 
 	.post-meta {
-		margin: 10px 100px 0;
+		margin: 10px 80px 0;
 		color: #9ea1ab;
 		font-size: 14px;
 
@@ -142,7 +144,7 @@
 	}
 
 	.post-content {
-		margin: 20px 100px 40px;
+		margin: 20px 80px 40px;
 
 		.kg-card-markdown > p {
 			 text-align: justify;
@@ -189,7 +191,7 @@
 		right: 0;
 		padding: 0;
 		background-image: none;
-		background: linear-gradient(0deg, rgba(18, 13, 123, 0.01) 0%, rgba(12, 17, 51, 0.9) 100%);
+		background: linear-gradient(0deg, rgba(18, 13, 123, 0) 0%, rgba(48, 55, 100, 0.8) 100%);
 		z-index: 100;
 
 		.mobile-branding {
@@ -267,6 +269,8 @@
     	overflow: hidden;
 			margin-right: 30px;
 			.border-radius(50%);
+			margin-bottom: 20px;
+			float: left;
 
 			img {
 				width:100%;
@@ -275,6 +279,7 @@
 
 		.details {
 			display: inline-block;
+			float: left;
 			span {
 				display: block;
 				line-height: 1em;
@@ -291,6 +296,8 @@
 			line-height: 1.5;
 			margin-top: 10px;
 			font-weight: 100;
+			width: 100%;
+    	clear: both;
 		}
 
 		.author {
