--- a/assets/css/less_parts/post.less
+++ b/assets/css/less_parts/post.less
@@ -41,8 +41,7 @@
 	  margin: 10px 80px 0;
 	  color: #9ea1ab;
 	  font-size: 14px;
-		display: flex;
-		justify-content: space-between;
+		display: block;
 		width: 35%;
 
 		.author {
@@ -51,6 +50,11 @@
 				color: #467192;
 				font-family: 'akzidenz-regular' !important;
 			}
+		}
+
+		.meta-item {
+			margin: 0 30px 0 0;
+			float:left;
 		}
 	}
 
@@ -253,7 +257,7 @@
 
 	.about-author {
 		background: @white;
-		padding: 40px 100px;
+		padding: 40px 80px;
 		margin: 20px 0;
 
 		@media(max-width: 1000px) {
