--- a/assets/css/less_parts/postfooter.less
+++ b/assets/css/less_parts/postfooter.less
@@ -70,11 +70,15 @@
 	}
 
 	.tag-cloud {
-		display: flex;
-    justify-content: space-between;
-		flex-direction: row;
-		flex-wrap: wrap;
+		display: block;
     width: 100%;
+
+		@media(max-width: 800px){
+			display: flex;
+	    justify-content: space-between;
+			flex-direction: row;
+			flex-wrap: wrap;
+		}
 
 		a {
 			border: 1px solid #e6e6e6;
@@ -85,6 +89,7 @@
 			border-radius: 2px;
 			.transition(all 0.2s ease);
 			font-size: .9em;
+			margin: 5px 10px 5px 0;
 
 
 			&:hover {
