added series widget

--- a/assets/css/less_parts/customtemplates.less
+++ b/assets/css/less_parts/customtemplates.less
@@ -308,13 +308,14 @@
       }
 
       .description {
-        padding: 15px;
+        padding: 15px 0;
         background: rgba(255, 255, 255, 0.9);
         margin:0;
         position: absolute;
         bottom: 0;
         color: #162c52;
         font-family: 'akzidenz-medium';
+        width:100%;
       }
 
       p {
