--- a/assets/css/less_parts/kanban.less
+++ b/assets/css/less_parts/kanban.less
@@ -24,6 +24,10 @@
     }
   }
 
+  .kg-card-markdown {
+    margin-bottom: 0;
+  }
+
 
 }
 
@@ -71,7 +75,7 @@
         padding: 10px 15px;
         position: relative;
         border: 1px solid #eaeaea;
-        margin-bottom: 15px;
+        margin-bottom: 20px;
         overflow: hidden;
 
         &.last-child {
