--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -16,6 +16,7 @@
 		{{> widget-sendgrid}}
 		{{> widget-recentpost}}
 		{{> widget-tagcloud}}
+		{{> widget-series}}
 	{{/is}}
 	{{^is "page,author"}}
 		{{> widget-twitter}}
