--- a/assets/css/less_parts/post.less
+++ b/assets/css/less_parts/post.less
@@ -120,6 +120,7 @@
 		margin: 10px 80px 0;
 		color: #9ea1ab;
 		font-size: 14px;
+		height: 20px;
 
 		@media(max-width: 800px) {
 			margin: 10px 40px 0;
