--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -112,11 +112,19 @@
 
 	.tag-name {
 		margin-top: 0;
+
+		i {
+			font-size: 16px;
+    	margin-right: 5px;
+		}
 	}
 
 	.post-count {
-		margin-top: 7px;
 		color: @text-color-light;
+	}
+
+	h3 {
+		margin-bottom: 10px;
 	}
 
 	.avatar {
