--- a/partials/cover-tag.hbs
+++ b/partials/cover-tag.hbs
@@ -1,9 +1,9 @@
 <div class="cover tag-cover">
 	<h3 class="tag-name">
-		Tag: {{tag.name}}
+		<i class="fal fa-tag"></i> {{tag.name}}
 	</h3>
 	<div class="post-count">
-		{{t "Total"}} {{plural pagination.total empty=(t "No posts") singular=(t "1 Post") plural=(t "% Posts")}}
+		{{plural pagination.total empty=(t "No posts") singular=(t "1 Post") plural=(t "% Posts")}}
 	</div>
 	{{#if tag.description}}
 	<div class="tag-description">
