--- a/assets/css/less_parts/kanban.less
+++ b/assets/css/less_parts/kanban.less
@@ -16,14 +16,6 @@
     margin:0;
   }
 
-  .featured-media {
-    @media(max-width: 800px){
-      width: 114% !important;
-      margin-left: -7% !important;
-      margin-top: -7% !important;
-    }
-  }
-
   .kg-card-markdown {
     margin-bottom: 0;
   }
@@ -77,6 +69,7 @@
         border: 1px solid #eaeaea;
         margin-bottom: 20px;
         overflow: hidden;
+        border-radius: 3px;
 
         &.last-child {
           margin-bottom: 0px;
@@ -207,14 +200,14 @@
           }
 
           .epic {
-            border-radius: 2px;
+            border-radius: 4px;
             text-align: center;
             padding: 1px 10px;
 
             span {
               color: white;
               font-size: 12px;
-              font-family: 'akzidenz-regular';
+              font-family: 'akzidenz-medium';
             }
 
             &.Creative span,
