--- a/partials/config.hbs
+++ b/partials/config.hbs
@@ -1,9 +1,11 @@
 <script>
+
 /*====================================================
   THEME SETTINGS & GLOBAL VARIABLES
 ====================================================*/
-//  1. Disqus comment settings
-var disqus_shortname = 'example'; // required: replace example with your forum shortname
+
+//  1. Twitter settings
+var twitter_url = 'example'; // for creating Twitter widgets
 
 //	2. Sidebar Position
 var sidebar_left = true; // Set true or flase for positioning sidebar on left
@@ -15,8 +17,13 @@ var google_plus_url = 'https://plus.google.com/communities/106724509785464667119
 //	4. Facebook Page Setting
 var facebook_page_url = 'https://www.facebook.com/hackersandslackers/';
 
-//	5. Mailchimp signup form Setting
+//	5. Mailchimp signup form Setting (change to SendGrid)
 var mailchimp_form_url = 'https://toddbirchard.us18.list-manage.com/subscribe?u=0810212e7213d32985240886c&id=3b2ab26ac7';
 var success_message = "Please check your inbox and confirm your email address. Thanks!";
+
+//	6. JIRA settings
+
+// 7. MongoDB Atlas settings
+
 
 </script>
