--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -13,15 +13,20 @@
 	{{/is}}
 	{{^is "author"}}
 		{{> widget-social}}
-		{{> widget-sendgrid}}
-		{{> widget-recentpost}}
-		{{> widget-tagcloud}}
+	{{/is}}
+	{{#is "home"}}
 		{{> widget-series}}
+	{{else}}
+		{{> widget-recentpost}}
+	{{/is}}
+	{{^is "author"}}
+		{{> widget-sendgrid}}
+		{{> widget-tagcloud}}
+		{{> widget-facebook}}
 	{{/is}}
 	{{^is "page,author"}}
 		{{> widget-twitter}}
 	{{/is}}
-	{{> widget-facebook}}
 	{{!-- {{> widget-google-plus}} --}}
 </div>
 <!-- end sidebar -->
